tests/ui/internal_storage_fails.rs
use wrongodb::storage::api::connection::Connection;

fn main() {
    let _ = std::any::type_name::<Connection>();
}
